fix: Fix CountRequest not being passed onto child classes